deleted a number in address

--- a/styleobsess/index.html
+++ b/styleobsess/index.html
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Styleobsess</div>
-    <div class="address-bar">London | UK | 123.456.7890</div>
+    <div class="address-bar">London | UK |</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
