--- a/styleobsess/index.html
+++ b/styleobsess/index.html
@@ -16,6 +16,7 @@
 
     <!-- Custom CSS -->
     <link href="css/business-casual.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
@@ -33,7 +34,7 @@
 <body>
 
     <div class="brand">Styleobsess</div>
-    <div class="address-bar">London | UK |</div>
+    <div class="address-bar">London | UK </div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -47,7 +48,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.html">Styleobsess</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -56,13 +57,13 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html">Shop</a>
                     </li>
                     <li>
-                        <a href="blog.html">Blog</a>
+                        <a href="blog.html">Compare</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="contact.html">My Cart</a>
                     </li>
                 </ul>
             </div>
@@ -71,10 +72,22 @@
         <!-- /.container -->
     </nav>
 
+    <div class="search">
+      <div>
+        <form>
+            Search items:
+            <input class="search" type="search" name="search me">
+        </form>
+      </div>
+    </div>
+
     <div class="container">
+
 
         <div class="row">
             <div class="box">
+                <h1 class="header" >Compare the latest trends
+                </h1>
                 <div class="col-lg-12 text-center">
                     <div id="carousel-example-generic" class="carousel slide">
                         <!-- Indicators -->
@@ -82,18 +95,22 @@
                             <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="1"></li>
                             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                            <li data-target="#carousel-example-generic" data-slide-to="3"></li>
                         </ol>
 
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="img-responsive img-full" src="img/slide-1.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/4skirts.jpg" alt="" height="100%" width="100%">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/slide-2.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/skirt2.jpg" alt="" height="20%" width="20%">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/slide-3.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/skirt3.jpg" alt="" height="20%" width="20%">
+                            </div>
+                            <div class="item">
+                                <img class="img-responsive img-full" src="img/skirt4.jpg" alt="" height="20%" width="20%">
                             </div>
                         </div>
 
@@ -106,13 +123,13 @@
                         </a>
                     </div>
                     <h2 class="brand-before">
-                        <small>Welcome to</small>
+                        <small>Compare the latest trends</small>
                     </h2>
-                    <h1 class="brand-name">Business Casual</h1>
+                    <h1 class="brand-name">Styleobsess</h1>
                     <hr class="tagline-divider">
                     <h2>
-                        <small>By
-                            <strong>Start Bootstrap</strong>
+                        <small>
+                            <strong>Start browsing clothes!</strong>
                         </small>
                     </h2>
                 </div>
