--- a/styleobsess/index.html
+++ b/styleobsess/index.html
@@ -72,22 +72,17 @@
         <!-- /.container -->
     </nav>
 
-    <div class="search">
-      <div>
-        <form>
-            Search items:
-            <input class="search" type="search" name="search me">
-        </form>
+    <div class='search'>
+      <div class='container'>
+        <input type="text" name="" id="input" class="form-control" placeholder="Search Items" required="required">
+        <button type="button" class="btn btn-lg btn-default">Search</button>
       </div>
     </div>
 
     <div class="container">
-
-
         <div class="row">
             <div class="box">
-                <h1 class="header" >Compare the latest trends
-                </h1>
+                <h1 class="header">Compare the Latest Trends:</h1>
                 <div class="col-lg-12 text-center">
                     <div id="carousel-example-generic" class="carousel slide">
                         <!-- Indicators -->
