--- a/styleobsess/index.html
+++ b/styleobsess/index.html
@@ -99,7 +99,7 @@
                                 <img class="img-responsive img-full" src="img/4skirts.jpg" alt="" height="100%" width="100%">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/skirt2.jpg" alt="" height="100%" width="100%">
+                                <img class="img-responsive img-full" src="img/4croptops.jpg" alt="" height="100%" width="100%">
                             </div>
                             <div class="item">
                                 <img class="img-responsive img-full" src="img/skirt3.jpg" alt="" height="100%" width="100%">
@@ -130,15 +130,13 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Build a website
-                        <strong>worth visiting</strong>
-                    </h2>
+                    <h1 class="intro-text text-center">All Under
+                        <strong>One Roof</strong>
+                    </h1>
                     <hr>
                     <img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
                     <hr class="visible-xs">
-                    <p>The boxes used in this template are nested inbetween a normal Bootstrap row and the start of your column layout. The boxes will be full-width boxes, so if you want to make them smaller then you will need to customize.</p>
-                    <p>A huge thanks to <a href="http://join.deathtothestockphoto.com/" target="_blank">Death to the Stock Photo</a> for allowing us to use the beautiful photos that make this template really come to life. When using this template, make sure your photos are decent. Also make sure that the file size on your photos is kept to a minumum to keep load times to a minimum.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <p> Styleobsess is here to help make your online shopping experience quicker and easier. With it, you can browse, compare and buy clothes with just a few clicks of a button </p>
                 </div>
             </div>
         </div>
