--- a/styleobsess/index.html
+++ b/styleobsess/index.html
@@ -33,6 +33,8 @@
 
 <body>
 
+    background="bg.jpeg"
+
     <div class="brand">Styleobsess</div>
     <div class="address-bar">London | UK </div>
 
@@ -60,10 +62,10 @@
                         <a href="about.html">Shop</a>
                     </li>
                     <li>
-                        <a href="blog.html">Compare</a>
+                        <a href="contact.html">My Cart</a>
                     </li>
                     <li>
-                        <a href="contact.html">My Cart</a>
+                        <a href="contact.html">Log in</a>
                     </li>
                 </ul>
             </div>
